# torchfl

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  exmpl.txt  jo_comments.txt  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py  test1.java  test3.py  torchfl-org-private-rule.yaml  torchfl-org-yaml-rule-test-1.yaml  torchfl-org-yaml-rule-test.yaml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: check.yml  checks.yml  docs.yml  pre-commit.yml  pytest-datamodules.yml  pytest-master.yml  pytest-models.yml  pytest.yml  python-build.yaml  python-publish.yml  semgrep.yml  tox.yml
config/: config.ini
docs/: Makefile  conf.py  examples.rst  index.rst  installation.rst  make.bat  modules.rst  torchfl.datamodules.rst  torchfl.federated.agents.rst  torchfl.federated.aggregators.rst  torchfl.federated.rst  torchfl.federated.samplers.rst  torchfl.models.core.cifar.cifar10.rst  torchfl.models.core.cifar.cifar100.rst  torchfl.models.core.cifar.rst  torchfl.models.core.emnist.balanced.rst  torchfl.models.core.emnist.byclass.rst  torchfl.models.core.emnist.bymerge.rst  torchfl.models.core.emnist.digits.rst  torchfl.models.core.emnist.letters.rst  torchfl.models.core.emnist.mnist.rst  torchfl.models.core.emnist.rst  torchfl.models.core.fashionmnist.rst  torchfl.models.core.rst  torchfl.models.rst  torchfl.models.sota.rst  torchfl.models.wrapper.rst  torchfl.rst  usage.rst
examples/: .gitkeep
examples/datamodules/: cifar.py
examples/federated/: mnist_entrypoint.py  mnist_entrypoint_iid.py  mnist_entrypoint_niid.py
examples/federated/aggregators/: fedavg_test.py
examples/trainers/: cifar10.py  cifar10_scratch.py  mnist.py
tests/: __init__.py  test_dataloader.py  test_model.py  test_models.py  test_torchfl.py
tests/datamodules/: __init__.py  test_cifar.py  test_emnist.py  test_fashionmnist.py
tests/models/: __init__.py  test_alexnet.py  test_cifar.py  test_densenet.py  test_emnist.py  test_fashionmnist.py  test_lenet.py  test_mlp.py  test_mobilenet.py  test_resnet.py  test_shufflenetv2.py  test_squeezenet.py  test_vgg.py
tests/models/cifar/: __init__.py
tests/models/cifar/cifar10/: __init__.py  (+8 more)
tests/models/emnist/: __init__.py
tests/models/fashionmnist/: __init__.py  test_alexnet.py  test_densenet.py  test_lenet.py  test_mlp.py  test_mobilenet.py  test_resnet.py  test_shufflenetv2.py  test_squeezenet.py  test_vgg.py
tests/models/wrappers/: __init__.py  test_cifar.py  test_emnist.py  test_fashionmnist.py
torchfl/: __init__.py  baseline.py  benchmark.py  cli.py  compatibility.py  config_resolver.py  dataloader.py  logger.py  models.py  multiprocess.py  multithread.py  sequential.py  temp_test.py  torchfl.py  trainer.py  utils.py
torchfl/benchmarks/: __init__.py
torchfl/datamodules/: __init__.py  base.py  cifar.py  datamodule.py  emnist.py  fashionmnist.py  types.py
torchfl/federated/: __init__.py  entrypoint.py  fed_trainer.py  fl_params.py  types.py
torchfl/federated/agents/: __init__.py  base.py  v1.py
torchfl/federated/aggregators/: __init__.py  base.py  fedavg.py
torchfl/federated/samplers/: __init__.py  base.py  random.py
torchfl/fl - jo/: Client.py  ClientModel_FL.py  Server.py  ServerModel_FL.py  functions.py  main.py
torchfl/models/: __init__.py  abstract.py  cifar.py  cifar10.py  emnist.py  emnist_digits.py  fashionmnist.py  mnist.py
torchfl/models/core/: __init__.py
torchfl/models/sota/: __init__.py  alexnet.py  densenet.py  googlenet.py  lenet.py  mlp.py  mobilenet.py  resnet.py  shufflenetv2.py  squeezenet.py  vgg.py
torchfl/models/wrapper/: __init__.py  cifar.py  emnist.py  fashionmnist.py  mappings.py
(+217 files in other folders)
